--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
   <header>
   <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{{url_for('main.pindex')}}">
+    <a class="navbar-item" href="{{url_for('main.index')}}">
         <i class="fi-xnsuxl-house-solid"></i>
     </a>
 
