--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,12 @@
         Bienvenido al sitio de LFyA
     </p>
 
-    <p class="subtitle">
-        Selecciona una acción
-    </p>
+{% endblock %}
+
+{% block content %}
+<form method="POST" action="/admin">
+    {{ form.csrf_token }}
+    {{ form..label }} {{ form.name(size=20) }}
+    <input type="submit" value="Ingresar">
+</form>
 {% endblock %}
