--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -5,9 +5,15 @@ Login administrador
 {% endblock %}
 
 {% block content %}
+
+<h2>Ingresar como administrador</h2>>
+
 <form method="POST" action="{{url_for('admin.login')}}">
     {{ form.csrf_token }}
-    {{ form.label }} {{ form.password(size=20) }}
+    <label class="label">{{ form.password.label }}</label>
+    <div class="controls">
+        {{ form.password(size=20) }}
+    </div>
     <input type="submit" value="Ingresar">
 </form>
 {% endblock %}
