--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,7 @@
     <title>{% block title %}{% endblock %} - LFyA </title>
     <script defer src="https://friconix.com/cdn/friconix.js"> </script> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-<style>
-</style>
+    {% block extra_links %}{% endblock %}
 </head>
 <body>
 <section class="content">
