--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,10 +6,24 @@
     <title>{% block title %}{% endblock %} - LFyA </title>
     <script defer src="https://friconix.com/cdn/friconix.js"> </script> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+	<script src="https://unpkg.com/htmx.org@1.8.0" integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous"></script>
     {% block extra_links %}{% endblock %}
 </head>
 <body>
 <section class="content">
+	<script>
+	function getCookie(name) {
+	  const value = `; ${document.cookie}`;
+	  const parts = value.split(`; ${name}=`);
+	  if (parts.length === 2) return parts.pop().split(';').shift();
+	}
+
+	document.body.addEventListener('htmx:configRequest', function(evt) {
+		evt.detail.credentials= 'same-origin',
+		evt.detail.headers['X-CSRF-TOKEN'] = getCookie('csrf_access_token'); // add a new header into the request
+	});
+	</script>
+
   <header>
   <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
@@ -49,7 +63,7 @@
 </section>
 </header>
 
-  <div class="content">	
+  <div class="content">
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
   {% endfor %}
@@ -74,6 +88,7 @@
     <p>Tiempo de creación: {{elapsed_time_seconds}} </p>
   </div>
 </footer>
+
 
 </body>
 </html>
