--- a/app/templates/teacher/list.html
+++ b/app/templates/teacher/list.html
@@ -1,11 +1,10 @@
-{% extends 'admin/base.html' %}
+{% extends 'teacher/base.html' %}
 
 {% block title %}
 Participación
 {% endblock %}
 
 {% block content %}
-
 
 <h1>Acciones</h1>
 <center>
