--- a/app/templates/teacher/base.html
+++ b/app/templates/teacher/base.html
@@ -4,11 +4,11 @@
 	<div class="navbar-item">
         <div class="buttons">
 		{% if current_user.is_authenticated %}
-          <a class="button is-primary" href="{{url_for('admin.logout')}}">
+          <a class="button is-primary" href="{{url_for('teacher.logout')}}">
               Salir
           </a>
 		{% else %}
-          <a class="button is-primary" href="{{url_for('admin.login')}}">
+          <a class="button is-primary" href="{{url_for('teacher.login')}}">
               Ingresar
           </a>
 		{% endif %}
@@ -22,7 +22,7 @@
         Bienvenido al sitio de LFyA
     </p>
     <p class="subtitle">
-        Ingresa al sitio para ver las opciones como administrador.
+        Ingresa al sitio para ver las opciones como profesor.
     </p>
 {% endblock %}
 
